# ledmonitor

./: .gitignore  .justfile  README.md  Untitled-1.js  config.py  display_protocol.py  ledmonitor.py  ledmonitor.spec  logger_config.py  main.py  pyproject.toml  service_installer.py  temperature_monitor.py
.github/workflows/: release.yml
config/: config.toml
